# solana-dex-parser-r

./: .gitignore  package-lock.json  test.ts
rust_parser/: Cargo.toml  MIGRATION.md
rust_parser/src/: config.rs  lib.rs  rpc.rs  types.rs
rust_parser/src/core/: constants.rs  dex_parser.rs  dex_parser_clean.rs  error.rs  instruction_classifier.rs  mod.rs  transaction_adapter.rs  transaction_adapter_optimized.rs  transaction_utils.rs  utils.rs  zc_adapter.rs  zc_adapter_helpers.rs  zc_instruction_classifier.rs  zc_transaction_adapter.rs  zc_transaction_utils.rs  zero_copy.rs
rust_parser/src/protocols/: mod.rs
rust_parser/src/protocols/meteora/: constants.rs  meteora_damm_v2_liquidity.rs  meteora_dbc_event_parser.rs  meteora_dbc_parser.rs  meteora_dlmm_liquidity.rs  meteora_liquidity_base.rs  meteora_parser.rs  meteora_pools_liquidity.rs  mod.rs  util.rs
rust_parser/src/protocols/pumpfun/: binary_reader.rs  constants.rs  error.rs  mod.rs  pumpfun_event_parser.rs  pumpfun_instruction_parser.rs  pumpfun_parser.rs  pumpswap_event_parser.rs  pumpswap_instruction_parser.rs  pumpswap_liquidity_parser.rs  pumpswap_parser.rs  pumpswap_parser_zc.rs  util.rs
rust_parser/src/protocols/simple/: mod.rs  simple_liquidity.rs  simple_meme.rs  simple_trade.rs  simple_transfer.rs
rust_parser/tests/: pumpfun.rs  rpc_decode.rs  snapshots.rs
rust_parser/tests/common/: mod.rs
rust_parser/tests/expected/: sample_all.json
rust_parser/tests/fixtures/: pumpfun_trade.json  sample_tx.json
