[package]
name = "solana-dex-parser"
version = "0.1.0"
edition = "2021"

[features]
default = ["protocol-simple"]
protocol-simple = []
cli = ["clap"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
spl-token = { version = "4.0", default-features = false, features = ["no-entrypoint"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
base64 = "0.21"
base64-simd = "0.8"
bs58 = "0.5"
byteorder = "1.5"
once_cell = "1.19"
hex = "0.4"
itoa = "1.0"
rustc-hash = "1.1"
clap = { version = "4.5", features = ["derive"], optional = true }
solana-client = "1.18"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures = "0.3"
futures-util = "0.3"
url = "2.5"
bincode = "1.3"

[dev-dependencies]
serde_json = "1.0"
insta = { version = "1.39", features = ["yaml"] }

[[bin]]
name = "dexp"
path = "src/bin/dexp.rs"
required-features = ["cli"]

[[bin]]
name = "parse_tx"
path = "src/bin/parse_tx.rs"

[[bin]]
name = "raw"
path = "src/bin/raw.rs"

[[bin]]
name = "wss_parse"
path = "src/bin/wss_parse.rs"

[[bin]]
name = "wss_ppl"
path = "src/bin/wss_ppl.rs"

[[bin]]
name = "analog"
path = "src/bin/analog.rs"

[[bin]]
name = "analog_rpc"
path = "src/bin/analog_rpc.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false
